--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,7 @@ body{
 
 /* navbar */
 
+
 .navbar{
     height: 5rem;
     background-color: white ;
@@ -60,7 +61,14 @@ body{
     margin-right: 2.5rem;
     margin-top: 2rem;
     opacity: 0.7;
+    
 }
+
+.filter a{
+    color: #222222;
+    text-decoration: none !important;
+}
+
 .filter:hover{
     opacity: 2;
     text-decoration: underline;
