--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -85,9 +85,9 @@
     </div>
     <%}%>
   </div>
-  <div class="col-8 offset-3 mb-3">
+  <!-- <div class="col-8 offset-3 mb-3">
     <h3>Where you'll be</h3>
     <div id="map">
     </div>
-  </div>
+  </div> -->
   <script src="/js/map.js"></script>
